fixed overflow nav

--- a/frontend/src/style/header.css
+++ b/frontend/src/style/header.css
@@ -26,13 +26,16 @@
     max-height: 100%;
     width: 100%;
     max-width: 100%;
-    margin-left: 50vw;
 }
 
 .top-nav-item {
     font-size: 1.2em;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    padding-left: 4vw;
+    padding-right: 4vw;
+}
+
+.bottom-nav-item {
+    font-size: 1.2em ;
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -44,8 +47,8 @@
 @media only screen and (min-width: 1550px) {
     .top-nav-item {
         font-size: 1.5em;
-        padding-left: 7vw;
-        padding-right: 7vw;
+        padding-left: 6vw;
+        padding-right: 6vw;
     }
 
     .searchInput {
